--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - .:/app
+      - .:/rails
       - gem_cache:/usr/local/bundle/gems
     env_file: .env
     environment:
